--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <h6>Admin Name</h6>
+              <span>Role</span>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -275,27 +275,27 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link ">
+        <a class="nav-link "  href="#">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
       </li><!-- End Dashboard Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#components-nav">
+        <a class="nav-link collapsed" data-bs-target="#components-nav" href="#membid">
           <i class="bi bi-menu-button-wide"></i><span>Members</span>
         </a>
         
       </li><!-- End Components Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+        <a class="nav-link collapsed" data-bs-target="#forms-nav" href="#sponsid">
           <i class="bi bi-journal-text"></i><span>Sponsors</span>
         </a>
       </li><!-- End Forms Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
+        <a class="nav-link collapsed" data-bs-target="#tables-nav" href="#nuid">
           <i class="bi bi-layout-text-window-reverse"></i><span>News and Updates</span>
         </a>
       </li><!-- End Tables Nav -->
@@ -393,7 +393,7 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Members <span>| Today</span></h5>
+                  <h5 class="card-title" >Members <span>| Today</span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -581,8 +581,8 @@
                   </ul>
                 </div>
 
-                <div class="card-body">
-                  <h5 class="card-title">Members <span>| Datewise</span></h5>
+                <div class="card-body" id="membid">
+                  <h5 class="card-title" >Members <span>| Datewise</span></h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
@@ -632,8 +632,8 @@
                   </ul>
                 </div>
 
-                <div class="card-body">
-                  <h5 class="card-title">Sponsors <span>| Datewise</span></h5>
+                <div class="card-body" >
+                  <h5 class="card-title" id="sponsid">Sponsors <span>| Datewise</span></h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
@@ -966,7 +966,7 @@
             </div>
 
             <div class="card-body pb-0">
-              <h5 class="card-title">News &amp; Updates <span>| Today</span></h5>
+              <h5 class="card-title" id="nuid">News &amp; Updates <span>| Today</span></h5>
 
               <div class="news">
                 <div class="post-item clearfix">
@@ -1014,14 +1014,14 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>IICMA</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
       <!-- You can delete the links only if you purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      
     </div>
   </footer><!-- End Footer -->
 
