--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" class="css">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -582,7 +583,7 @@
                 </div>
 
                 <div class="card-body" id="membid">
-                  <h5 class="card-title" >Members <span>| Datewise</span></h5>
+                  <h5 class="card-title" >Members <span>| <a href="#"><i class="fa-solid fa-plus"></i></a> </span></h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
@@ -633,7 +634,7 @@
                 </div>
 
                 <div class="card-body" >
-                  <h5 class="card-title" id="sponsid">Sponsors <span>| Datewise</span></h5>
+                  <h5 class="card-title" id="sponsid">Sponsors <span>| <a href="#"><i class="fa-solid fa-plus"></i></a> </span></h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
@@ -756,6 +757,7 @@
                 <li class="dropdown-header text-start">
                   <h6>Filter</h6>
                 </li>
+                
 
                 <!-- <li><a class="dropdown-item" href="#">Today</a></li> -->
                 <li><a class="dropdown-item" href="#">This Month</a></li>
@@ -764,7 +766,7 @@
             </div>
 
             <div class="card-body">
-              <h5 class="card-title">Upcoming Events <span>| Datewise</span></h5>
+              <h5 class="card-title">Upcoming Events <span>| <a href="#"><i class="fa-solid fa-plus"></i></a> </span></h5>
 
               <div class="activity">
 
