--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 </head>
 
 <body>
+  <div class="modal-base" id="modal-base" data-active="false">
+    <div class="modal-content" id="modal-content"></div>
+  </div>
 
   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
@@ -583,7 +586,7 @@
                 </div>
 
                 <div class="card-body" id="membid">
-                  <h5 class="card-title" >Members <span>| <a href="#"><i class="fa-solid fa-plus"></i></a> </span></h5>
+                  <h5 class="card-title" >Members <span>| <a href="#" onclick="toggleModal(1);"><i class="fa-solid fa-plus"></i></a> </span></h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
@@ -1034,7 +1037,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js" defer></script>
 
 </body>
 
