--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                 </div>
 
                 <div class="card-body" >
-                  <h5 class="card-title" id="sponsid">Sponsors <span>| <a href="#"><i class="fa-solid fa-plus"></i></a> </span></h5>
+                  <h5 class="card-title" id="sponsid">Sponsors <span>| <a href="#" onclick="toggleModal(2);"><i class="fa-solid fa-plus"></i></a> </span></h5>
 
                   <table class="table table-borderless datatable">
                     <thead>
